<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ResultActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/text_congratulations"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="165dp"
            android:layout_height="149dp"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/miu" />

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:layout_gravity="center"
            android:hint="@string/hint_score"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_play_again"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/buttons_background"
            android:onClick="startAgain"
            android:textStyle="bold"
            android:text="@string/text_play_again"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_result_analysis"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/buttons_background"
            android:onClick="showResultAnalysis"
            android:textStyle="bold"
            android:text="@string/text_result_analysis"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_home"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons_background"
            android:onClick="backToHome"
            android:textStyle="bold"
            android:text="@string/text_home"
            android:textColor="@android:color/black"
            android:textSize="22sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>